fix whitespace

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -29,6 +29,7 @@
 
 .question-output  {
   font-family: monospace;
+  white-space: pre;
 }
 
 .codearea {
